--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1236,6 +1236,9 @@ select {
 .w-screen {
   width: 100vw;
 }
+.w-2\/3 {
+  width: 66.666667%;
+}
 .w-1\/2 {
   width: 50%;
 }
@@ -1259,9 +1262,6 @@ select {
 }
 .w-3 {
   width: 0.75rem;
-}
-.w-2\/3 {
-  width: 66.666667%;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1947,10 +1947,6 @@ select {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
-.text-green-800 {
-  --tw-text-opacity: 1;
-  color: rgb(22 101 52 / var(--tw-text-opacity));
-}
 .text-green-700 {
   --tw-text-opacity: 1;
   color: rgb(21 128 61 / var(--tw-text-opacity));
@@ -2059,6 +2055,74 @@ select {
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
+@-webkit-keyframes fadeInUp {
+        0% {
+            opacity:0;
+            transform: translateY(100%);
+        }
+        100% {
+            opacity:100;
+            transform:translateY(0);
+        }
+    }
+@keyframes fadeInUp {
+        0% {
+            opacity:0;
+            transform: translateY(100%);
+        }
+        100% {
+            opacity:100;
+            transform:translateY(0);
+        }
+    }
+@-webkit-keyframes fadeIn {
+        0% {
+            opacity:0;
+        }
+        100% {
+            opacity:100;
+        }
+    }
+@keyframes fadeIn {
+        0% {
+            opacity:0;
+        }
+        100% {
+            opacity:100;
+        }
+    }
+@-webkit-keyframes scale {
+        0% {
+            opacity:0;
+            transform: scale(0);
+        }
+        100% {
+            opacity:100;
+            transform: scale(1);
+        }
+    }
+@keyframes scale {
+        0% {
+            opacity:0;
+            transform: scale(0);
+        }
+        100% {
+            opacity:100;
+            transform: scale(1);
+        }
+    }
+.fadeInUp {
+        -webkit-animation: fadeInUp 1s forwards;
+                animation: fadeInUp 1s forwards;
+    }
+.fadeIn {
+        -webkit-animation: fadeIn 1s forwards;
+                animation: fadeIn 1s forwards;
+    }
+.scale {
+        -webkit-animation: scale 1s forwards;
+                animation: scale 1s forwards;
+    }
 .trix-content {
     max-height:300px !important;
     overflow-y: scroll;
@@ -2078,6 +2142,9 @@ select {
     height:80px;
     background-color: white;
     box-shadow: 0 2px 10px 0 rgba(0,0,0,0.1);
+}
+.hero-full-height {
+    height:100vh;
 }
 /* refresh css npm run dev */
 .text-orange {
@@ -2512,6 +2579,23 @@ article + article {
 .post-container {
     margin-top:2em;
 }
+.delay-animation-2 {
+    -webkit-animation-delay: 2s;
+            animation-delay: 2s;
+}
+.delay-animation-3 {
+    -webkit-animation-delay: 3s;
+            animation-delay: 3s;
+}
+.delay-animation-1 {
+    -webkit-animation-delay: 1s;
+            animation-delay: 1s;
+}
+.delay-animation-4 {
+    -webkit-animation-delay: 4s;
+            animation-delay: 4s;
+}
+/* animations */
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -2738,16 +2822,6 @@ article + article {
   .dark\:text-white {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
-
-  .dark\:text-green-500 {
-    --tw-text-opacity: 1;
-    color: rgb(34 197 94 / var(--tw-text-opacity));
-  }
-
-  .dark\:text-gray-200 {
-    --tw-text-opacity: 1;
-    color: rgb(229 231 235 / var(--tw-text-opacity));
   }
 
   .dark\:text-gray-500 {
