--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -24,6 +24,10 @@
     box-shadow: 0 2px 10px 0 rgba(0,0,0,0.1);
 }
 
+.hero-full-height {
+    height:100vh;
+}
+
 /* refresh css npm run dev */
 
 .text-orange {
@@ -480,4 +484,63 @@ article + article {
 
 .post-container {
     margin-top:2em;
+}
+
+.delay-animation-2 {
+    animation-delay: 2s;
+}
+.delay-animation-3 {
+    animation-delay: 3s;
+}
+.delay-animation-1 {
+    animation-delay: 1s;
+}
+.delay-animation-4 {
+    animation-delay: 4s;
+}
+/* animations */
+
+@layer utilities {
+
+    @keyframes fadeInUp {
+        0% {
+            opacity:0;
+            transform: translateY(100%);
+        }
+        100% {
+            opacity:100;
+            transform:translateY(0);
+        }
+    }
+    @keyframes fadeIn {
+        0% {
+            opacity:0;
+        }
+        100% {
+            opacity:100;
+        }
+    }
+    @keyframes scale {
+        0% {
+            opacity:0;
+            transform: scale(0);
+        }
+        100% {
+            opacity:100;
+            transform: scale(1);
+        }
+    }
+
+    .fadeInUp {
+        animation: fadeInUp 1s forwards;
+    }
+
+    .fadeIn {
+        animation: fadeIn 1s forwards;
+    }
+    .scale {
+        animation: scale 1s forwards;
+    }
+
+
 }
